--- a/kiwi_is_the_best_dog.html
+++ b/kiwi_is_the_best_dog.html
@@ -5,6 +5,7 @@
 <meta name="description" content="Kiwi kiwi">
 </head>
 <body>
+CEDE
 Kiwi is a nine years old dog.
 <img src="kiwi.jpg"/>  
 </body>
